Disabled Pan Dragmode

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -129,7 +129,7 @@
     "    \n",
     "    fig.update_layout(\n",
     "        template='plotly_white',\n",
-    "        dragmode='pan',\n",
+    "        dragmode=False,\n",
     "        font=dict(size=12, color='black'),\n",
     "        title={'text': f\"{title}<br><span style='font-size:12px; color:gray;'>{analysis_period_text}</span>\", \n",
     "               'x':0.5, \n",
